
WIP      Support ERSB and NPlayers in online scrapers.

WIP      ROM scanner reports.

WIP      Changes and suggestions propoed by Atsumori.
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2560843#pid2560843
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2586596#pid2586596


[B]Advanced Emulator Launcher | version 0.9.6 | 12 May 2017[/B]

WIP      Added a "Display ROMs" setting valid only in Parent/Clone display mode.
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2581878#pid2581878
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2582004#pid2582004

FEATURE  New platform Panasonic 3DO.

FEATURE  Update NFO files after scraping. This is useful to interrupt the scanner when scanning
         large collections and resume scanning later.
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2548998#pid2548998

FEATURE  Allow only one instance of AEL running at a time.
         This prevents multiple launcher execution and also get rids forever of any database
         corruption issues due to concurrency! Thanks Roman_V_M for ideas about the fix.
         See http://forum.kodi.tv/showthread.php?tid=310697

FIX      Fixed crash when displaying a Launcher in Parent/Clone view with Unknown ROMs.

FIX      Fixed the number of ROMs counter when importing AL launchers.xml

FIX      ROM scanner ignores NFO files if option "NFO Files + Scrapers" is set.


[B]Advanced Emulator Launcher | version 0.9.6-beta1 | 5 March 2017[/B]

FEATURE  Import and Export of Launchers configurations. Will be very useful especially for 
         Android users.

FEATURE  Use a Window property to let skins know wheter a launcher OR ROMs are being rendered.
         Set xbmcgui.Window(10001).setProperty('AEL_Content', 'launchers')
             xbmcgui.Window(10001).setProperty('AEL_Content', 'roms')
         It must be set on entering and unset on exiting the plugin.
